--- a/pages/sports.html
+++ b/pages/sports.html
@@ -25,7 +25,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Daily Bugle - Sports</title>
   </head>
 <body>
