--- a/pages/international.html
+++ b/pages/international.html
@@ -24,20 +24,50 @@
 
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Daily Bugle - International</title>
   </head>
 <body>
-    <div class="fixed-top bkColor">
+    <nav class="navbar navbar-expand-lg fixed-top bkColor m-auto">
+        <div class="container-fluid">
+          <a class="navbar-brand mainTitle px-2" href="../index.html">Daily Bugle</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto text-center p-2">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/entertainment.html">Entertainment</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/finance.html">Finance</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/international.html">International</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/politics.html">Politics</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/sports.html">Sports</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/tech.html">Tech</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <!-- <div class="fixed-top bkColor">
     <header class="mainTitle">
         <a href="../index.html"><h1 class="mainTitle">Daily Bugle</h1></a>
     </header>
-    <hr class="noBottomMargin">
+    <hr class="noBottomMargin"> -->
     <!-- #### NAVIGATION BAR #### -->
-        <nav>
-            <ul class="nav__links animate__animated animate__flipInX">
+        <!-- <nav>
+            <ul class="nav__links animate__animated animate__flipInX"> -->
                 <!-- <li><a href="../index.html">Home</a></li> -->
-                <li><a href="./entertainment.html">Entertainment</a></li>
+                <!-- <li><a href="./entertainment.html">Entertainment</a></li>
                 <li><a href="./finance.html">Finance</a></li>
                 <li><a href="./international.html">International</a></li>
                 <li><a href="./politics.html">Politics</a></li>
@@ -46,7 +76,7 @@
             </ul>
         </nav>
         <hr class="noBottomMargin">
-    </div>
+    </div> -->
         <!-- #### Main Article -->
         <div class="divContainer">
             <div class="textContInt">
