--- a/index.html
+++ b/index.html
@@ -31,22 +31,24 @@
 
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <title>Daily Bugle - Home</title>
   
 </head>
 <body>
-    <div class="fixed-top bkColor">
+
+
+    <!-- <div class="fixed-top bkColor">
         <header>
             <a href="./index.html"><h1 class="mainTitle">Daily Bugle</h1></a>
         </header>
-        <hr class="noBottomMargin">
+        <hr class="noBottomMargin"> -->
         <!-- #### NAVIGATION BAR #### -->
-            <nav>
-                <ul class="nav__links animate__animated animate__flipInX">
+            <!-- <nav>
+                <ul class="nav__links animate__animated animate__flipInX"> -->
                     <!-- <li><a href="./index.html">Home</a></li> -->
-                    <li><a href="./pages/entertainment.html">Entertainment</a></li>
+                    <!-- <li><a href="./pages/entertainment.html">Entertainment</a></li>
                     <li><a href="./pages/finance.html">Finance</a></li>
                     <li><a href="./pages/international.html">International</a></li>
                     <li><a href="./pages/politics.html">Politics</a></li>
@@ -55,9 +57,44 @@
                 </ul>
             </nav>
         <hr class="noBottomMargin">
-    </div>
+    </div> -->
+
+
+
+    <nav class="navbar navbar-expand-lg fixed-top bkColor m-auto">
+        <div class="container-fluid">
+          <a class="navbar-brand mainTitle px-2" href="./index.html">Daily Bugle</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto text-center p-2">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./pages/entertainment.html">Entertainment</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./pages/finance.html">Finance</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./pages/international.html">International</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./pages/politics.html">Politics</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./pages/sports.html">Sports</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./pages/tech.html">Tech</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+    
        
-    <div class="container marginForTitle text-center">
+    <div class="container text-center marginForTitle">
         <h2 class="text-center titleFont">SPIDER-MAN Spotted in London</h2>
         <img class="blackNwhite giveMeColor animate__animated animate__fadeIn smaller rounded-2" src="https://assets.londonist.com/uploads/2019/07/i875/spider_man_far_from_home.jpg" alt="italianPM">
         <p class="text-center m-2 paragraph">The Webslinger was seen yesterday at the top of London Eye.</p>
