--- a/pages/politics.html
+++ b/pages/politics.html
@@ -25,20 +25,50 @@
 
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Daily Bugle - Politics</title>
   </head>
 <body>
-    <div class="fixed-top bkColor">
+    <nav class="navbar navbar-expand-lg fixed-top bkColor m-auto">
+        <div class="container-fluid">
+          <a class="navbar-brand mainTitle px-2" href="../index.html">Daily Bugle</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto text-center p-2">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/entertainment.html">Entertainment</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/finance.html">Finance</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/international.html">International</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/politics.html">Politics</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/sports.html">Sports</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/tech.html">Tech</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <!-- <div class="fixed-top bkColor">
     <header class="mainTitle">
         <a href="../index.html"><h1 class="mainTitle">Daily Bugle</h1></a>
     </header>
-    <hr class="noBottomMargin">
+    <hr class="noBottomMargin"> -->
     <!-- #### NAVIGATION BAR #### -->
-        <nav>
-            <ul class="nav__links animate__animated animate__flipInX">
+        <!-- <nav>
+            <ul class="nav__links animate__animated animate__flipInX"> -->
                 <!-- <li><a href="../index.html">Home</a></li> -->
-                <li><a href="./entertainment.html">Entertainment</a></li>
+                <!-- <li><a href="./entertainment.html">Entertainment</a></li>
                 <li><a href="./finance.html">Finance</a></li>
                 <li><a href="./international.html">International</a></li>
                 <li><a href="./politics.html">Politics</a></li>
@@ -47,7 +77,7 @@
             </ul>
         </nav>
         <hr class="noBottomMargin">
-    </div>
+    </div> -->
 
         <!-- #### Main Article #### -->
         <div class="container marginForTitle text-center">
@@ -68,21 +98,21 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="imgCarousel" src="https://i.guim.co.uk/img/media/662ab2bafc9835ec8301070b0e1bdb555cfdbf5c/0_121_2538_1522/master/2538.jpg?width=620&quality=85&fit=max&s=2e58e2c05d4be9d84a3c66a93eb2f485" class="d-block w-100" alt="...">
+                    <img class="imgCarousel blackNwhite giveMeColor" src="https://i.guim.co.uk/img/media/662ab2bafc9835ec8301070b0e1bdb555cfdbf5c/0_121_2538_1522/master/2538.jpg?width=620&quality=85&fit=max&s=2e58e2c05d4be9d84a3c66a93eb2f485" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block backgroundText">
                       <h5>Boris Johnson could try for political comeback like 'Berlusconi or Trump', says Rory Stewart</h5>
                       <p class="padpad">The former Tory minister and long-standing critic of the PM accuses the outgoing premier of having "an extraordinary ego".</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="imgCarousel" src="https://i.guim.co.uk/img/media/11789f8b7754b4dce1f7939ca5670d0c70e22565/0_111_5464_3278/master/5464.jpg?width=700&quality=85&fit=max&s=12cf410f1b91901763219aa738682d08" class="d-block w-100" alt="...">
+                    <img class="imgCarousel blackNwhite giveMeColor" src="https://i.guim.co.uk/img/media/11789f8b7754b4dce1f7939ca5670d0c70e22565/0_111_5464_3278/master/5464.jpg?width=700&quality=85&fit=max&s=12cf410f1b91901763219aa738682d08" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block backgroundText">
                       <h5>Green Tories back Johnson’s call for successor to invest in renewables</h5>
                       <p class="padpad">Outgoing PM to warn against focusing on short-term energy solutions in one of his final speeches</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="imgCarousel" src="https://i.guim.co.uk/img/media/a6a4d7eb17ad69a67806a35bad3c01cd5bc296aa/0_200_6000_3600/master/6000.jpg?width=700&quality=85&fit=max&s=9dc68deefbc2bce9a472dc3d671b5258" class="d-block w-100" alt="...">
+                    <img class="imgCarousel blackNwhite giveMeColor" src="https://i.guim.co.uk/img/media/a6a4d7eb17ad69a67806a35bad3c01cd5bc296aa/0_200_6000_3600/master/6000.jpg?width=700&quality=85&fit=max&s=9dc68deefbc2bce9a472dc3d671b5258" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block backgroundText">
                       <h5>Rising energy costs ‘will force thousands of corner shops to close’</h5>
                       <p class="padpad">Association of Convenience Stores urges chancellor to provide more financial support for small shops</p>
