--- a/pages/tech.html
+++ b/pages/tech.html
@@ -26,20 +26,54 @@
 
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Daily Bugle - Tech</title>
   </head>
 <body>
-    <div class="fixed-top bkColor">
+  <nav class="navbar navbar-expand-lg fixed-top bkColor m-auto">
+    <div class="container-fluid">
+      <a class="navbar-brand mainTitle px-2" href="../index.html">Daily Bugle</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto text-center p-2">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../pages/entertainment.html">Entertainment</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../pages/finance.html">Finance</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../pages/international.html">International</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../pages/politics.html">Politics</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../pages/sports.html">Sports</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../pages/tech.html">Tech</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+
+
+    <!-- <div class="fixed-top bkColor">
     <header class="mainTitle">
         <a href="../index.html"><h1 class="mainTitle">Daily Bugle</h1></a>
     </header>
-    <hr class="noBottomMargin">
+    <hr class="noBottomMargin"> -->
     <!-- #### Nav Bar #### -->
-        <nav>
-            <ul class="nav__links animate__animated animate__flipInX">
+        <!-- <nav>
+            <ul class="nav__links animate__animated animate__flipInX"> -->
                 <!-- <li><a href="../index.html">Home</a></li> -->
-                <li><a href="./entertainment.html">Entertainment</a></li>
+                <!-- <li><a href="./entertainment.html">Entertainment</a></li>
                 <li><a href="./finance.html">Finance</a></li>
                 <li><a href="./international.html">International</a></li>
                 <li><a href="./politics.html">Politics</a></li>
@@ -48,7 +82,7 @@
             </ul>
         </nav>
         <hr class="noBottomMargin">
-    </div>
+    </div> -->
 
         <!-- #### Main Article and only one for now hehe #### -->
         
@@ -81,21 +115,21 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="imgCarousel" src="https://cdn.vox-cdn.com/thumbor/BG61T0ZY3VJMr8euJi5yUW-k1Jo=/0x0:1270x840/920x613/filters:focal(534x319:736x521):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/71263030/Screenshot_2022_08_19_at_13.07.11.0.png" class="d-block w-100" alt="...">
+                    <img class="imgCarousel blackNwhite giveMeColor" src="https://cdn.vox-cdn.com/thumbor/BG61T0ZY3VJMr8euJi5yUW-k1Jo=/0x0:1270x840/920x613/filters:focal(534x319:736x521):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/71263030/Screenshot_2022_08_19_at_13.07.11.0.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block backgroundText">
                       <h5>Mark Zuckerberg has responded to the metaverse memes</h5>
                       <p class="padpad">‘I know the photo I posted earlier this week was pretty basic’</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="imgCarousel" src="https://cdn.vox-cdn.com/thumbor/Ho8t1ebJMUc2SWgpxQMb6FpnnwE=/32x0:1663x964/920x613/filters:focal(707x350:1001x644):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/71261823/Screen_Shot_2022_08_19_at_8.12.50_AM.0.png" class="d-block w-100" alt="...">
+                    <img class="imgCarousel blackNwhite giveMeColor" src="https://cdn.vox-cdn.com/thumbor/Ho8t1ebJMUc2SWgpxQMb6FpnnwE=/32x0:1663x964/920x613/filters:focal(707x350:1001x644):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/71261823/Screen_Shot_2022_08_19_at_8.12.50_AM.0.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block backgroundText">
                       <h5>Google brought back the timer, and it’s about time</h5>
                       <p class="padpad">It’s been gone for weeks</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="imgCarousel" src="https://www.nasa.gov/sites/default/files/thumbnails/image/artemis_identity_moon_mars.jpg" class="d-block w-100" alt="...">
+                    <img class="imgCarousel blackNwhite giveMeColor" src="https://www.nasa.gov/sites/default/files/thumbnails/image/artemis_identity_moon_mars.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block backgroundText">
                       <h5>Why NASA Wants to Go Back to the Moon</h5>
                       <p class="padpad">The space agency’s upcoming lunar mission will launch the ambitious Artemis program, building on the landings 50 years ago.</p>
